--- a/scripts/Makefile
+++ b/scripts/Makefile
@@ -1,7 +1,7 @@
 src_dir = MSDMain
 lib_dir = lib
 main = MSDMain.Main
-classpath = .:$(lib_dir)/*:../hbase-0.94.17/lib/*:../Programs/hbase-0.94.17/*
+classpath = .:$(lib_dir)/*:hbase-0.94.18/lib/*:hbase-0.94.18/*
 
 all:
 	javac -classpath $(classpath) Main.java
@@ -10,4 +10,4 @@ clean:
 	rm Main.class
 	
 run:
-	java -cp . Main
+	java -cp $(classpath) Main
